# cpp-exercises

./: .gitignore  CMakeLists.txt
lab1/doublebasepalindromes/: CMakeLists.txt  DoubleBasePalindromes.cpp  DoubleBasePalindromes.h
lab1/factorial/: CMakeLists.txt  Factorial.cpp
lab1/multiplicationtable/: CMakeLists.txt  MultiplicationTable.cpp  MultiplicationTable.h
lab1/palindrome/: CMakeLists.txt  Palindrome.cpp  Palindrome.h
lab1/reversestring/: CMakeLists.txt  ReverseString.cpp  ReverseString.h
lab10/algotest/: Algo.cpp  Algo.h  CMakeLists.txt
lab2/greatestproduct/: CMakeLists.txt  GreatestProduct.cpp  GreatestProduct.h
lab2/polybius/: CMakeLists.txt  Polybius.cpp  Polybius.h
lab2/simpleforwardlist/: CMakeLists.txt  SimpleForwardList.cpp  SimpleForwardList.h
lab2/xorcypherbreaker/: CMakeLists.txt  XorCypherBreaker.cpp  XorCypherBreaker.h
lab5/memorychunk/: CMakeLists.txt  MemoryChunk.cpp  MemoryChunk.h
lab5/textpool/: CMakeLists.txt  TextPool.cpp  TextPool.h
lab5/xxx/: XXX.cpp  XXX.h  main.cpp
lab6/academia/: CMakeLists.txt  StudentRepository.cpp  StudentRepository.h
lab6/counter/: CMakeLists.txt  Counts.cpp  Counts.h  Word.cpp  Word.h  WordCounter.cpp  WordCounter.h
lab6/zipper/: CMakeLists.txt  Zipper.cpp  Zipper.h
lab7/academiaqueries/: CMakeLists.txt  StudentRepositoryQueries.cpp  StudentRepositoryQueries.h
lab7/arrayfill/: CMakeLists.txt  FillArray.cpp  FillArray.h  Filler.cpp  Filler.h
lab7/comparable/: CMakeLists.txt  Comparable.cpp  Comparable.h
lab8/: CMakeLists.txt
lab8/pesel/: CMakeLists.txt  Pesel.cpp  Pesel.h
lab8/studentvalidator/: CMakeLists.txt  StudentValidator.cpp  StudentValidator.h
lab9/serialization/: Data.cpp  Data.h
tests/lab2test/: PolybiusStep1Test.cpp  PolybiusStep2Test.cpp
tests/lab6test/: StudentRepositoryStudentTest.cpp  StudentRepositoryStudyYearTest.cpp  StudentRepositoryTest.cpp  WordCounterTest.cpp
tests/lab7test/: ArrayFillIncrementalTest.cpp  ArrayFillRandomTest.cpp  ArrayFillSquaredTest.cpp  ArrayFillUniformTest.cpp  StudentRepositoryQueryByFirstNameTest.cpp  StudentRepositoryQueryTest.cpp
tests/lab8test/: CMakeLists.txt  PeselTest.cpp  StudentValidatorTest.cpp
